test/errors/duplicate_notice_components.ecsact
package error.duplicate_notice_components;

component ExampleComponent {
  i32 num;
}

system DuplicateNoticeComponents {
  readwrite ExampleComponent;

  notify {
    always ExampleComponent;
    oninit ExampleComponent;
  }
}
